--- a/sysctl.conf
+++ b/sysctl.conf
@@ -76,3 +76,5 @@ net.ipv4.udp_wmem_min = 16384
 net.ipv4.tcp_max_tw_buckets = 1440000
 net.ipv4.tcp_tw_recycle = 1
 net.ipv4.tcp_tw_reuse = 1
+
+#new url https://www.jianshu.com/p/fb7c482da86f
